[package]
name = "ratlab"
version = "0.1.0"
edition = "2021"
authors = ["Quinn Horton <q-horton>", "Jay Hunter <ThatSealgair>"]

[lib]
name = "ratlib"
path = "src/lib.rs"

[[bin]]
name = "ratlab"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
